--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -66,5 +66,14 @@
 
 body {
     overflow-y: hidden;
+    overflow-x: hidden;
+}
+
+.css-bmgubx-MuiGrid-root>.MuiGrid-item {
+   padding-top: 0px!important; 
+}
+
+.css-zxdg2z{
+  padding: 0px!important;
 }
   
